--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/footer.css">
-    <!--<link rel="stylesheet" href="css/news.css">
-    <link rel="stylesheet" href="css/shows.css">
-    <link rel="stylesheet" href="css/bio.css">
-    <link rel="stylesheet" href="css/photos.css">
-    <link rel="stylesheet" href="css/download.css">
-    <link rel="stylesheet" href="css/lyrics.css">
-    <link rel="stylesheet" href="css/merch.css">-->
+    <link rel="stylesheet" href="css/news.css">
+    <!--<link rel="stylesheet" href="css/shows.css">-->
+    <!--<link rel="stylesheet" href="css/bio.css">-->
+    <!--<link rel="stylesheet" href="css/photos.css">-->
+    <!--<link rel="stylesheet" href="css/download.css">-->
+    <!--<link rel="stylesheet" href="css/lyrics.css">-->
+    <!--<link rel="stylesheet" href="css/merch.css">-->
     <link rel="stylesheet" href="css/contact.css">
 
     <script src="js/vendor/jquery.js"></script>
