--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/news.css">
     <link rel="stylesheet" href="css/shows.css">
-    <!--<link rel="stylesheet" href="css/bio.css">-->
+    <link rel="stylesheet" href="css/bio.css">
     <!--<link rel="stylesheet" href="css/photos.css">-->
     <!--<link rel="stylesheet" href="css/download.css">-->
     <!--<link rel="stylesheet" href="css/lyrics.css">-->
